# tower-lsp-boilerplate

./: .gitignore  Cargo.toml  README.md  build.js  esbuild.js  language-configuration.json  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: ci.yml
client/: package.json  testFixture.l  tsconfig.json
client/src/: extension.ts
src/: main.rs
syntaxes/: l.tmLanguage.json
