[package]
name = "l-language-server"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
l-lang = { git = "https://github.com/IWANABETHATGUY/l-lang", package = "l" }

rust-lapper = "1.2"
oxc_index = "4.1"
ropey = "1.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
im-rc = "15.0"
anyhow = "1.0"
thiserror = "2.0"
dashmap = "6.1.0"
tower-lsp-server ={version="0.23",features=["proposed"]} 
tokio = { version = "1.49", features = ["full"] }


